Minor display overflow bug fix, remove arbitrary CSS class

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,3 @@ button {
     width: 100%;
     height: 100%;
 }
-
-.clear {
-    align-self: right;
-}
